# lokicieroperu

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: backfill.yml  daily.yml
data/processed/: 2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  index.json
data/processed/consumidor/: 2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  index.json
data/processed/elperuano/: 2026-04-10.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  (+15 more)
scripts/: build.py  notify.py  notify_email.py  scrape.py  summarize.py
scripts/lib/: brevo.py  concesiones.py  elperuano.py  gemini.py  pdf.py  schemas.py  sources.py  telegram.py
scripts/scrapers/: base.py  consumidor.py  elperuano.py  financiero.py  gaceta_pi.py  indecopi_alertas.py  noticias.py  tribunal_fiscal.py  visitantes.py
scripts/summarizers/: base.py  consumidor.py  elperuano.py  gaceta_pi.py  indecopi_alertas.py  noticias.py  tribunal_fiscal.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
templates/: email_diario.html  pdf_diario.html
tests/: test_elperuano_parser.py  test_financiero.py  test_noticias_scraper.py  test_noticias_summarizer.py  test_schemas_v2.py
(+320 files in other folders)
